src/objects/Proforma__c.object
<CustomObject>
    <fields>
        <fullName>Admission_Multiplier__c</fullName>
        <label>Admission Multiplier</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admission_Tax_Cust_Grps__c</fullName>
        <label>Admission Tax</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admission_Tax_Rate__c</fullName>
        <label>Admission Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Admission_Tax__c</fullName>
        <formula>(1+ Campaign_Project_Proforma__r.Admission_Multiplier__c)* Rated_Days__c * Campaign_Project_Proforma__r.Admission_Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Worth__c</fullName>
        <label>Average Daily Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Length_of_Trips__c</fullName>
        <label>Average Length of Trip</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bad_Debt_Expense_Rate__c</fullName>
        <label>Bad Debt Expense Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bad_Debt_Expenses_Cust_Grps__c</fullName>
        <label>Bad Debt Expenses</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bad_Debt_Expenses__c</fullName>
        <formula>Campaign_Project_Proforma__r.Bad_Debt_Expense_Rate__c *  Table_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bad Debt Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_RC_Reinvestment_Cust_Grps__c</fullName>
        <label>Base RC Reinvestment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_RC_Reinvestment__c</fullName>
        <label>Base RC Reinvestment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCR_RR_Tax_Cust_Grps__c</fullName>
        <label>CCR RR Tax</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCR_Tax_Rate__c</fullName>
        <label>CCR Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_Criteria__c</fullName>
        <label>Campaign Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Begin_Date__c</fullName>
        <formula>Campaign_Project__r.Valid_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Project Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Description__c</fullName>
        <formula>Campaign_Project__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Project Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_End_Date__c</fullName>
        <formula>Campaign_Project__r.Valid_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Proforma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Project Proforma</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Proforma__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Campaign Project Proforma</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Proforma__c</referenceTo>
        <relationshipLabel>Proformas</relationshipLabel>
        <relationshipName>Proformas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Proformas</relationshipLabel>
        <relationshipName>Proformas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Casino_Gifts_Cust_Grps__c</fullName>
        <label>Casino Gifts</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Casino_Gifts__c</fullName>
        <label>Casino Gifts</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Coin_In_and_Table_Drop__c</fullName>
        <formula>IF(AND(Slot_Hold_Percent__c = 0,
Table_Hold_Percent__c = 0), 
0, Slot_Hold_Amount__c +  Table_Hold_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coin In and Table Drop</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coin_In_and_Table_Drop_for_Cust_Grps__c</fullName>
        <label>Coin In and Table Drop for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Airfare_Cust_Grps__c</fullName>
        <label>Comp Airfare</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Airfare__c</fullName>
        <label>Comp Airfare</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Comp Airfare</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comp_Transportation_Cust_Grps__c</fullName>
        <label>Comp Transportation</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Transportation__c</fullName>
        <label>Comp Transportation</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Comp Transportation</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contra_Expenses_Delayered__c</fullName>
        <label>Contra Expenses (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_Expenses_Incremental__c</fullName>
        <label>Contra Expenses (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_Expenses_Layered__c</fullName>
        <label>Contra Expenses (Layered)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_P_L_Delayered__c</fullName>
        <label>Contra P/L (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_P_L_Incremental__c</fullName>
        <label>Contra P/L (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_P_L_Layered__c</fullName>
        <label>Contra P/L (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_P_L_per_player_Delayered__c</fullName>
        <label>Contra P/L per player (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_P_L_per_player_Incremental__c</fullName>
        <label>Contra P/L per player (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_P_L_per_player_Layered__c</fullName>
        <label>Contra P/L per player (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_ROI_Delayered__c</fullName>
        <label>Contra ROI% (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contra_ROI_Incremental__c</fullName>
        <label>Contra ROI% (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contra_ROI_Layered__c</fullName>
        <label>Contra ROI% (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contra_ROS_Delayered__c</fullName>
        <label>Contra ROS% (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contra_ROS_Incremental__c</fullName>
        <label>Contra ROS% (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contra_ROS_Layered__c</fullName>
        <label>Contra ROS% (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contra_Revenue_Delayered__c</fullName>
        <label>Contra Revenue (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_Revenue_Incremental__c</fullName>
        <label>Contra Revenue (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contra_Revenue_Layered__c</fullName>
        <label>Contra Revenue (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMC_Text__c</fullName>
        <formula>TEXT( Campaign_Project__r.Direct_Marketing_Center__r.DMC_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMC (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_in_Event__c</fullName>
        <label>Days in Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Advertising_Cust_Grps__c</fullName>
        <label>Direct Mail Advertising</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Advertising__c</fullName>
        <label>Direct Mail Advertising</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Direct Mail Advertising</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>F_B_Comp_Expense_Rate__c</fullName>
        <label>F&amp;B Comp Expense Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F_B_Comp_Expenses_Cust_Grps__c</fullName>
        <label>F&amp;B Comp Expenses</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_B_Comp_Expenses__c</fullName>
        <formula>Campaign_Project_Proforma__r.F_B_Comp_Expense_Rate__c *  Layered_GGR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F&amp;B Comp Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Expenses_Cust_Grps__c</fullName>
        <label>Fixed Expenses</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Expenses__c</fullName>
        <label>Fixed Expenses</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Fixed Expenses</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Giveaways_Cust_Grps__c</fullName>
        <label>Giveaways</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giveaways__c</fullName>
        <label>Giveaways</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Giveaways</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Individualized_Slot_Percent__c</fullName>
        <label>Individualized Slot %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Individualized_Table__c</fullName>
        <label>Individualized Table %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Layered_GGR__c</fullName>
        <formula>Unique_Players__c * Average_Daily_Worth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Layered GGR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Layered_GGR_for_Cust_Grps__c</fullName>
        <label>Layered GGR for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Text__c</fullName>
        <formula>Campaign_Project__r.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Trips__c</fullName>
        <label>Number of Trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Comp_Expense_Cust_Grps__c</fullName>
        <label>Other Comp Expense</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Comp_Expense_Rate__c</fullName>
        <label>Other Comp Expense Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Comp_Expenses__c</fullName>
        <formula>Campaign_Project_Proforma__r.Other_Comp_Expense_Rate__c * Layered_GGR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Comp Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Rate_of_Redemption__c</fullName>
        <formula>Unique_Players__c / Total_Invitations_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Redemption %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>POD_Text__c</fullName>
        <formula>Text(Campaign_Project__r.POD__r.POD_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POD (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Similar_Campaign_Projects__c</fullName>
        <label>Past Similar Campaign Projects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Postage_Freight_Cust_Grps__c</fullName>
        <label>Postage &amp; Freight</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postage_Freight__c</fullName>
        <label>Postage &amp; Freight</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Postage &amp; Freight</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Promo_Chips_Match_Play_Cust_Grps__c</fullName>
        <label>Promo Chips/Match Play</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Chips_Match_Play__c</fullName>
        <label>Promo Chips/Match Play</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Promo Chips/Match Play</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RC_Gift_Cust_Grps__c</fullName>
        <label>RC Gift</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RC_Gift__c</fullName>
        <label>RC Gift</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>RC Gift</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RC_Multiplier_Investment_Cust_Grps__c</fullName>
        <label>RC Multiplier Investment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RC_Multiplier_Investment__c</fullName>
        <label>RC Multiplier Investment</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>RC Multiplier Investment</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RR_GV_Cust_Grps__c</fullName>
        <label>RR/GV</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RR_GV__c</fullName>
        <label>RR/GV</label>
        <summarizedField>Expense_Item__c.Customer_Group_Expense__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Item__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>RR/GV</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Item__c.Customer_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rated_Days__c</fullName>
        <formula>ROUND( Unique_Players__c *  Number_of_Trips__c  * Average_Length_of_Trips__c ,0)*(1- Redeemed_No_Rated_Play__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rated Days (less No Play)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rated_Days_less_No_Play_for_Cust_Grps__c</fullName>
        <label>Rated Days (less No Play) for Cust. Grps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redeemed_No_Rated_Play__c</fullName>
        <label>Redeemed No Rated Play %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rep_Host_Commissions_Rate__c</fullName>
        <label>Rep &amp; Host Commissions Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rep_and_Host_Commissions_Cust_Grps__c</fullName>
        <label>Rep and Host Commissions</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_and_Host_Commissions__c</fullName>
        <formula>Layered_GGR__c *  Campaign_Project_Proforma__r.Rep_Host_Commissions_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep &amp; Host Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenues_Layered__c</fullName>
        <label>Total Revenue (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room_Comp_Expense_Cust_Grps__c</fullName>
        <label>Room Comp Expense</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room_Comp_Expense_Rate__c</fullName>
        <label>Room Comp Expense Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Room_Comp_Expenses__c</fullName>
        <formula>Campaign_Project_Proforma__r.Room_Comp_Expense_Rate__c *  Layered_GGR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Comp Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot_Amount__c</fullName>
        <formula>Layered_GGR__c *  Individualized_Slot_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Slot Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot_Amount_for_Cust_Grps__c</fullName>
        <label>Slot Amount  for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot_Hold_Amount__c</fullName>
        <formula>IF(Slot_Hold_Percent__c = 0,0, Slot_Amount__c/ Slot_Hold_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Slot Hold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot_Hold_Amount_for_Cust_Grps__c</fullName>
        <label>Slot Hold Amount  for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot_Hold_Percent__c</fullName>
        <formula>Campaign_Project_Proforma__r.Slot_Hold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Slot Hold %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Slot_Hold__c</fullName>
        <label>Slot Hold %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Slot_Hold_for_Cust_Grps__c</fullName>
        <label>Slot Hold % for Cust Grps</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slot_Percent__c</fullName>
        <formula>Campaign_Project_Proforma__r.Slot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Slot %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Slot_Revenue__c</fullName>
        <formula>Layered_GGR__c *  Individualized_Slot_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Slot Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot_Revenue_for_Cust_Grps__c</fullName>
        <label>Slot Revenue  for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot_Tax_Cust_Grps__c</fullName>
        <label>Slot Tax</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot_Tax_Rate__c</fullName>
        <label>Slot Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Slot_Tax__c</fullName>
        <label>Slot Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <label>Slot %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Slot_for_Cust_Grps__c</fullName>
        <label>Slot % for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Table_Amount__c</fullName>
        <formula>Layered_GGR__c *  Individualized_Table__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Table Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table_Amount_for_Cust_Grps__c</fullName>
        <label>Table Amount  for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table_Hold_Amount__c</fullName>
        <formula>If(Table_Hold_Percent__c = 0,0, Table_Amount__c /  Table_Hold_Percent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Table Hold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table_Hold_Amount_for_Cust_Grps__c</fullName>
        <label>Table Hold Amount  for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table_Hold_Percent__c</fullName>
        <formula>Campaign_Project_Proforma__r.Table_Hold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Table Hold %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_Hold__c</fullName>
        <label>Table Hold %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_Hold_for_Cust_Grps__c</fullName>
        <label>Table Hold %  for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_Percent__c</fullName>
        <formula>Campaign_Project_Proforma__r.Table__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Table %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_Revenue__c</fullName>
        <formula>Layered_GGR__c *  Individualized_Table__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Table Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table_Revenue_for_Cust_Grps__c</fullName>
        <label>Table Revenue  for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table_Tax_Cust_Grps__c</fullName>
        <label>Table Tax</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table_Tax_Rate__c</fullName>
        <label>Table Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_Tax__c</fullName>
        <label>Table Tax</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <label>Table %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_for_Cust_Grps__c</fullName>
        <label>Table %  for Cust Grps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Casino_Expenses_Cust_Grps__c</fullName>
        <formula>Total_Gaming_Tax_Cust_Grps__c +
 Base_RC_Reinvestment_Cust_Grps__c +
 Admission_Tax_Cust_Grps__c +
 Bad_Debt_Expenses_Cust_Grps__c +
 Rep_and_Host_Commissions_Cust_Grps__c +
 F_B_Comp_Expenses_Cust_Grps__c +
 Room_Comp_Expense_Cust_Grps__c +
 Other_Comp_Expense_Cust_Grps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Casino Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Casino_Expenses__c</fullName>
        <formula>Total_Gaming_Tax__c + 
 Base_RC_Reinvestment__c +
 Bad_Debt_Expenses__c +
 Admission_Tax__c +
 Rep_and_Host_Commissions__c +
 F_B_Comp_Expenses__c +
 Room_Comp_Expenses__c +
 Other_Comp_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Casino Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expenses_Delayered__c</fullName>
        <label>Total Expenses (Delayered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expenses_Incremental__c</fullName>
        <label>Total Expenses (Incremental)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expenses_Layered__c</fullName>
        <label>Total Expenses (Layered)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>